# metacurator

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  justfile  pyproject.toml
$CACHE/: ontology.duckdb
.github/workflows/: ci.yml
docs/adr/: 0000-template.md  0001-record-architecture-decisions.md  0002-spec-first-development.md  0003-linkml-schema-substrate.md  0004-deterministic-spine-agent-judgment.md  0005-ontology-grounding-backends.md  0006-mcp-streamable-http-tool-surface.md  0007-model-integration-pluggable-judgment-clients.md  0008-value-driven-semantic-typing.md  0009-self-describing-output-linkml-first.md
docs/design/: data-flow.md  overview.md
docs/spec/: 000-glossary.md  010-data-model.md  020-resolve.md  030-archive-ena.md  040-acquire.md  050-tables.md  060-dictionary.md  070-ontology-grounding.md  080-diff-qc.md  090-report.md  100-judge.md  110-pipeline.md  120-mcp-tool-surface.md  130-judgment-clients.md  140-profile-and-type.md  150-output-serialization.md  README.md  _TEMPLATE.md
examples/: grounding_audit.py  reproduce_vogtmann.py
schema/: Makefile  cmd.yaml  metacurator_core.yaml
src/metacurator/: __init__.py  acquire.py  archive.py  cli.py  dictionary.py  diff.py  ground.py  judge.py  mcp_server.py  models.py  pipeline.py  report.py  resolve.py  tables.py
src/metacurator/grounding/: __init__.py  _store.py  base.py  ducklake.py  local_duckdb.py
src/metacurator/llm/: __init__.py  base.py  vertex.py
tests/: conftest.py  test_acquire.py  test_archive.py  test_cli.py  test_cmd_schema.py  test_dictionary.py  test_diff.py  test_ducklake.py  test_grounding.py  test_judge.py  test_llm.py  test_local_backend.py  test_mcp.py  test_models.py  test_pipeline.py  test_resolve.py  test_tables.py
tests/fixtures/: README.md  ena_filereport_PRJEB12449.tsv  test_schema.yaml
